# Math

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeLists_BACKUP_23138.txt  CMakeLists_LOCAL_23393.txt  CMakeLists_REMOTE_23138.txt  MathPackageConfig.cmake  README.MD  README.md
cmake/: Doxyfile.in  MathConfig.cmake.in
cmake/Modules/: BoostTestHelpers.cmake
cmake/modules/: CPackConfig.cmake
devel/cmake/: gcc.sh
devel/install/: bootstrap-apt.sh  bootstrap-pacman.sh
doc/: CMakeLists.txt  Doxyfile.in  MainPage.h
doc/html/: Constants_8h__dep__incl.md5  Constants_8h_source.html  Degree_8h.html  Degree_8h__dep__incl.dot  Degree_8h__incl.dot  Functions_8h__dep__incl.md5  Line_8h.html  Line_8h__incl.md5  Line_8h_source.html  MainPage_8h.html  Point2_8h.html  Radian_8h__dep__incl.md5  Radian_8h__incl.dot  Radian_8h_source.html  Vector2_8h.html  annotated.html  classMath_1_1Line.html  classMath_1_1Radian-members.html  classMath_1_1Radian.html  classMath_1_1Vector-members.html  classMath_1_1Vector2-members.html  classMath_1_1Vector2.html  classes.html  dir_43e0a1f539e00dcfa1a6bc4d4fee4fc2.html  dir_aa84ab276dd7bf3f7f81a4ff762656e4.html  dir_b091af37e56bdb581356014b5a396d08.html  dir_c50dd2c479eb1f76f5029d29d197aace.html  dir_e68e8157741866f444e17edd764ebbae.html  dir_efb08053e06b1c9c536bc0e8b0da2a64.html  dir_ff42f7213dac283b3c8ae9db5ed2bddc.html  functions.html  functions_func.html  functions_rela.html  functions_vars.html  menudata.js  structMath_1_1Point2-members.html
doc/html/search/: all_0.js  all_4.js  all_9.js  all_a.js  all_c.js  classes_2.js  classes_3.js  files_1.js  files_5.js  files_6.js  functions_1.js  functions_2.js  functions_3.js  functions_4.js  functions_6.js  functions_9.js  functions_a.js  related_2.js  searchdata.js  variables_5.js
doc/www/: Constants_8h.html  Constants_8h__dep__incl.dot  Degree_8h__dep__incl.md5  Degree_8h__incl.md5  Degree_8h_source.html  Functions_8h.html  Functions_8h__dep__incl.dot  Functions_8h__incl.dot  Functions_8h__incl.md5  Functions_8h_source.html  Line_8h__dep__incl.dot  Line_8h__dep__incl.md5  Line_8h__incl.dot  MainPage_8h_source.html  Point2_8h_source.html  Radian_8h.html  Radian_8h__dep__incl.dot  Radian_8h__incl.md5  Vector2_8h__incl.dot  Vector2_8h__incl.md5  Vector2_8h_source.html  Vector_8h.html  Vector_8h__incl.dot  Vector_8h__incl.md5  Vector_8h_source.html  classMath_1_1Degree-members.html  classMath_1_1Degree.html  classMath_1_1Line-members.html  classMath_1_1Vector.html  dir_06734744590c0f8aff0ff517d8a17552.html  dir_296d53ceaeaa7e099814a6def439fe8a.html  dir_2ea1f05dab51ac2ca6f0042d2cf47424.html  dir_9826c2cc67cad8543f9f96885efd56e6.html  dir_a9a020afaaa16a9d2b04a3820e0383f8.html  dir_c7ffecf6afb4cbe85bb3923acd3f8b9e.html  dir_f6d6f42e3657da1a84f60f985432f94e.html  files.html  graph_legend.html  index.html  namespaceMath.html  (+5 more)
doc/www/search/: all_1.js  all_5.js  all_6.js  all_7.js  all_8.js  classes_0.js  classes_1.js  classes_4.js  files_4.js  files_7.js  functions_0.js  functions_7.js  functions_8.js  functions_b.js  related_0.js  related_1.js  variables_0.js  variables_1.js  variables_2.js  variables_3.js  variables_4.js
examples/: CMakeLists.txt  DegreeExample.cpp  PointExample.cpp  RadianExample.cpp
extlibs/: CMakeLists.txt
include/: CMakeLists.txt
include/Math/: CMakeLists.txt  Constants.h  Degree.h  Functions.h  Line.h  Point.h  Radian.h  Ray.h  Vector.h  VectorQuantity.h  cVector.h
install/: bootstrap.sh
math/: CMakeLists.txt  CMakelists.txt  CMakelists.txt.orig
math/include/: CMakeLists.txt
math/include/Math/: CMakeLists.txt  Constants.h  Degree.h  Degree.h.orig  Functions.h  Line.h  Line.h.orig  Point.h  Point2.h  Radian.h  Radian.h.orig  Ray.h  ScalarQuantity.h  Vector.h  Vector.h.orig  Vector2.h  VectorQuantity.h  cVector.h  cVector.h.orig
math/src/: CMakeLists.txt
math/src/Math/: CMakeLists.txt  Degree.cpp  Degree.cpp.orig  Functions.cpp  Line.cpp  Line.cpp.orig  Point.cpp  Point.cpp.orig  Radian.cpp  Radian.cpp.orig  Ray.cpp  Vector.cpp  Vector2.cpp  cVector.cpp
scripts/build-scripts/: gcc.sh
scripts/install/: bootstrap-apt.sh  bootstrap-pacman.sh
src/: CMakeLists.txt
src/Math/: CMakeLists.txt  Degree.cpp  Line.cpp  Point.cpp  Radian.cpp  Ray.cpp  Vector.cpp  cVector.cpp
test/Math/: CMakeLists.txt
tests/: CMakeLists.txt  CMakeLists.txt.orig
tests/Math/: CMakeLists.txt  CMakeLists.txt.orig  DegreeTest.cpp  DegreeTest.cpp.orig  FunctionsTest.cpp  FunctionsTest.cpp.orig  LineTest.cpp  LineTest.cpp.orig  Point2Test.cpp  PointTest.cpp  PointTest.cpp.orig  RadianTest.cpp  Vector2Test.cpp
